Story 3.3: the review patch, part one -- the Brain stops seeing the salt
Four reviews; fairness returned BLOCK. The blocking finding was traced in full.
`Brains.of(name, salt)` passed the Run's salt into the Decider, and the salt is
what the harness reseeds the game's generator from at every wait. The mixing
function is published on the methodology page, the game's generator is a
published LCG, and `brain` is allowed `java.lang` -- so a Decider holding the
salt could compute the game's coming draws with nothing but 64-bit arithmetic.
At the first wait of the first floor it would know whether its next attack lands
and what the next chest holds. ADR-0007 rejected that attack in advance, and
`RunLoop.play` has always taken the salt and the agent's seed as two separate
parameters; the rig had collapsed them. A Decider is now seeded from the Run's
own triple, which is what a human at that screen has.

The command published on the methodology page, in the runner's own javadoc, in
the Gradle task's comment and in this story's Verification section did not run:
`--commit` was required and none of them passed it. The checkout answers when
the caller does not, and the refusal names the flag when the checkout cannot.

The command line stops accepting what it cannot mean. `--commit --root` attested
the string "--root" as the Shatterfish commit in every header; `--out --root`
wrote the invocation into a folder of that name; an empty string passed every
required flag; and `--cap` and `--deadline` were unbounded where `--parallel`
was bounded, so `--deadline 0` killed every Run before it booted and reported
the whole set incomplete with nothing saying a typo had caused it.

The reader that guards FR-11 was weaker than the reader beside it. `LogHeader`
returned the first match for a key, so a header carrying `oracle` twice read as
fair -- while `LogText` refuses a duplicated key and says why. It looked at line
0 only, so two logs concatenated passed. A header whose trailing newline 